# VSClient

./: CMakeLists.txt  main.cpp
src/: ClientInput.c  ClientInput.h  StringUtillities.c  StringUtillities.h  main.c  main.h
